--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tapioca-ui",
   "theme": "ui",
-  "version": "0.1.1-0",
+  "version": "0.2.0",
   "description": "A dynamic and sweet UI theme for Atom ☆ * (≧ ▽ ≦) * ☆ (forked from atom-material-ui with love <3)",
   "main": "./lib/main",
   "keywords": [
